fix: inline flex center aligning

--- a/src/routes/_home/tags/home-cta/home-cta.style.module.scss
+++ b/src/routes/_home/tags/home-cta/home-cta.style.module.scss
@@ -76,8 +76,8 @@ h1 {
   border: 1px solid currentColor;
   font-size: 1rem;
   font-weight: 300;
+  justify-content: center;
   align-items: center;
-  text-align: center;
 }
 
 .underlineBlue {
