--- a/src/routes/_home/tags/home-language/home-language.style.module.scss
+++ b/src/routes/_home/tags/home-language/home-language.style.module.scss
@@ -86,7 +86,7 @@
   background-color: var(--section-color);
   font-size: 1.1rem;
   font-weight: 500;
-  text-align: center;
+  justify-content: center;
   align-self: flex-start;
   justify-self: end;
   width: 100%;
